MAJ du .gitignore pour généraliséation du projet

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-PrivateKey.ppk $ git rm --cached PrivateKey.ppk rm PrivateKey.ppk $ git commit -m Start ignoring PrivateKey
+PrivateKey.ppk
+PublicKey
+untitled.*
